welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array,n:int){
                      ^Array1:18: error: not found: type int
def colonneSuivante(t:Array,n:int){
                              ^Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array,n:int){
                      ^